# raytracer-cuda

./: CMakeLists.txt  README.md  final.ppm  hosts.txt  img.ppm  light.ppm  spheres.ppm
include/raytracer/: PPM.h  aabb.h  bvh.h  bvh_builder.h  camera.h  camera_data.h  color.h  cuda_compat.h  cuda_utils.h  device_ray_color.h  hittable.h  hittable_dispatch.h  hittable_dispatch_impl.h  hittable_list.h  instances.h  interval.h  material.h  quad.h  random_utils.h  ray.h  render.h  rtweekend.h  sphere_gpu.h  temp.h  vec3.h
src/cpu/: main.cpp
src/gpu/: render.cu
